crates/cyrus-core/tests/ui/fail/mix_brands.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/fail/mix_brands.rs:18:22
   |
12 |     d1.with_brand(|b1| {
   |                    -- `b1` declared here, outside of the closure body
13 |         d2.with_brand(|b2| {
   |                        -- `b2` is a reference that is only valid in the closure body
...
18 |             for i in d1.indices(&b1) {
   |                      ^^^^^^^^^^^^^^^ `b2` escapes the closure body here
   |
   = note: requirement occurs because of the type `Brand<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `Brand<'id>` is invariant over the parameter `'id`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/fail/mix_brands.rs:15:22
   |
12 |     d1.with_brand(|b1| {
   |                    --
   |                    |
   |                    `b1` is a reference that is only valid in the closure body
   |                    has type `Brand<'1>`
...
15 |             let _b = BVec::new(&d2, &b2, vec![4, 5, 6]);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                      |
   |                      `b1` escapes the closure body here
   |                      argument requires that `'1` must outlive `'static`
